# IAP-SD

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
Middlewares/mbedTLS/: CMakeLists.txt
Middlewares/mbedTLS/custom/: libc.c
Middlewares/mbedTLS/include/: mbedtls_config.h
Tools/: compare_crypto.sh
application/: .mxproject  CMakeLists.txt  STM32F401XX_FLASH.ld  application.ioc  message.txt  private.pem  pub.pem  startup_stm32f401xc.s
application/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
application/Core/Src/: main.c  spi.c  stm32f4xx_it.c
application/cmake/stm32cubemx/: CMakeLists.txt
bootloader/: .mxproject  CMakeLists.txt  STM32F401XX_FLASH.ld  bootloader.ioc  message.txt  private.pem  pub.pem
bootloader/Core/Inc/: main.h
bootloader/Core/Src/: adc.c  dma.c  gpio.c  i2c.c  main.c  stm32f4xx_it.c  usart.c
bootloader/FATFS/App/: fatfs.c
bootloader/cmake/stm32cubemx/: CMakeLists.txt
